# audio

./: .cproject  .directory  .project  CMakeLists.txt  README.md
CMake/: FindEpoxy.cmake
Debug/: asound2  makefile  objects.mk  sources.mk
Debug/src/: .gitignore  Playback.d  Scope.d  main.d  subdir.mk  test.d
Debug/src/buffer/: BaseBuffer.d  GenBuffer.d  Random.d  TestBuffer.d  WavBuffer.d  subdir.mk
Debug/src/fft/: fft.d  subdir.mk
Debug/src/playback/: Playback.d  subdir.mk
Debug/src/process/: Process.d  Vector.d  subdir.mk
Debug/unused/: subdir.mk
cpp/: main.cpp
cpp/buffer/: BaseBuffer.cpp  FunctionBuffer.cpp  WavBuffer.cpp
cpp/display/: Scope.cpp
cpp/fft/: fft.h
cpp/math/: Matrix.h  NN.cpp  Note.cpp  Note.h  Scale.cpp  Scale.h
cpp/playback/: Playback.cpp  Playback.h  source.h
cpp/process/: Process.cpp  Process.h  Vector.cpp
cpp/score/: Note.cpp  Score.cpp
cpp/view/: AudioView.cpp
cpp/window/: MainWindow.cpp
python/: main.py
src/: CMakeLists.txt  Display.h  Playback.cpp  Playback.h  Scope.cpp  Scope.h  buffer.h  main.cpp  main.cpp~  source.h  test.cpp
src/buffer/: BaseBuffer.cpp  BaseBuffer.h  FunctionBuffer.h  GenBuffer.cpp  GenBuffer.h  Random.cpp  Random.h  TestBuffer.cpp  TestBuffer.cpp~  TestBuffer.h  TestBuffer.h~  WavBuffer.cpp  WavBuffer.h
src/data/: value.h
src/device/: Mixer.cpp  Mixer.h  Source.h
src/display/: Display.h  Scope.cpp  Scope.h
src/fft/: fft.cpp  fft.h
src/io/: wav.cpp  wav.h
src/math/: Grid.cpp  Grid.h  Matrix.cpp  Matrix.h  NN.h  Series.cpp  Series.h  TimeTree.cpp  TimeTree.h
src/playback/: Playback.cpp  Playback.h  Pulse.cpp  Pulse.h  source.h
src/process/: Process.cpp  Process.h  Vector.cpp  Vector.h
src/renderer/: Font.cpp  Font.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/score/: Note.h  Score.h  Structure.cpp  Structure.h
src/unused/: Playback.cpp  Playback.h  Scope.h  source.h  test.cpp
src/view/: AudioView.h  Ortho.cpp  Ortho.h
src/window/: Event.cpp  Event.h  Window.cpp  Window.h
